Fix overflow bug main budget page

--- a/frontend/src/components/budget/budget.css
+++ b/frontend/src/components/budget/budget.css
@@ -22,7 +22,6 @@
   align-items: flex-start;
   background: rgb(238, 236, 236);
   padding: 50px 30px;
-  height: 100vh;
   box-shadow: 5px 8px 12px black;
   border-right: 1px solid black;
   position: relative;
